--- a/index.html
+++ b/index.html
@@ -4,8 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NEW YEAR NEW MISSION</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Merriweather:wght@400;900&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="styles/nynm.css">
 </head>
 <body>
-    
+    <div class="page">
+        <div id="banner">
+            <div id="hny">Happy New Year</div>
+            <div id="party">New Year Party<br>Celebration</div>
+        </div>
+
+        <div id="offer">65% OFF</div>
+        <div id="offer-text">OUR HOLIDAY DEALS ARE BETTER<br><span id="ctg">ALL CATEGORIES<span></div>
+
+            <div><img style="width: 802.9px;
+                height: 500px; padding-left: 250px; margin-top: 30px" src="/images/New Year Photo.png" alt="hny.png"></div>
+    </div>
 </body>
 </html>
