--- a/index.html
+++ b/index.html
@@ -21,8 +21,28 @@
         <div id="offer">65% OFF</div>
         <div id="offer-text">OUR HOLIDAY DEALS ARE BETTER<br><span id="ctg">ALL CATEGORIES<span></div>
 
-            <div><img style="width: 802.9px;
-                height: 500px; padding-left: 250px; margin-top: 30px" src="/images/New Year Photo.png" alt="hny.png"></div>
+        <div><img style="width: 802.9px;height: 500px; padding-left: 250px; margin-top: 30px" src="/images/New Year Photo.png" alt="hny.png"></div>
+
+        <div class="invite">
+         <div id="main-text"> <h2>Welcome to midnight party</h2>
+         <p id="sub-text">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod.</p>
+        <a href="" style="color: #FFF;
+        text-align: center;
+        font-family: Inter;
+        font-size: 20px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: normal;
+        text-transform: uppercase;">Join Now</a>
+         </div>
+        <div><img src="/images/Group 70.png" alt="2024.png"></div>
+        </div>
+        <div id="time-place">
+            <div class="time-place-text"><span style="color: #F00;">Place</span>: New Park Hotel <br>
+                <span style="color: #F00;">Date</span>: 31 December Night 2023 <br>
+                <span style="color: #F00;">Time</span>: Evening 7.30 pm to 12.30 am</div><br>
+                <button onclick="" id="join-btn">Join Now</button>
+        </div>
     </div>
 </body>
 </html>
